[gd_scene load_steps=6 format=3 uid="uid://dot0y6kbrri6e"]

[ext_resource type="Script" uid="uid://cv4n58l3pvndp" path="res://Scripts/Enemy/wave_manager.gd" id="1_4l55s"]
[ext_resource type="FontFile" uid="uid://b3vfg5cp4lfp6" path="res://Born2bSportyFS.otf" id="2_8h7h8"]
[ext_resource type="Script" uid="uid://cqna8t8wck3lb" path="res://Scripts/ScriptableWave.gd" id="2_td62b"]
[ext_resource type="Resource" uid="uid://vh7fvfwqwvup" path="res://tres/wave.tres" id="3_23qk5"]
[ext_resource type="Resource" uid="uid://c823ko4x5jal8" path="res://tres/wave2.tres" id="4_cqr2a"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_4l55s")
waves = Array[ExtResource("2_td62b")]([ExtResource("3_23qk5"), ExtResource("4_cqr2a")])
wave_break_duration = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_right = 71.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("2_8h7h8")
theme_override_fonts/mono_font = ExtResource("2_8h7h8")
theme_override_fonts/italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_font = ExtResource("2_8h7h8")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
text = "0"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineR" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 71.0
offset_top = -6.0
offset_right = 200.0
offset_bottom = 74.0
grow_horizontal = 2
scale = Vector2(1.475, 1.475)
theme_override_fonts/normal_font = ExtResource("2_8h7h8")
theme_override_fonts/mono_font = ExtResource("2_8h7h8")
theme_override_fonts/italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_font = ExtResource("2_8h7h8")
theme_override_font_sizes/bold_italics_font_size = 70
theme_override_font_sizes/italics_font_size = 70
theme_override_font_sizes/mono_font_size = 70
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 70
bbcode_enabled = true
text = "~~~~"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineL" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -258.0
offset_top = -6.0
offset_right = -131.0
offset_bottom = 74.0
grow_horizontal = 2
scale = Vector2(1.475, 1.475)
theme_override_fonts/normal_font = ExtResource("2_8h7h8")
theme_override_fonts/mono_font = ExtResource("2_8h7h8")
theme_override_fonts/italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_font = ExtResource("2_8h7h8")
theme_override_font_sizes/bold_italics_font_size = 70
theme_override_font_sizes/italics_font_size = 70
theme_override_font_sizes/mono_font_size = 70
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 70
bbcode_enabled = true
text = "~~~~"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameMessage" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -298.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_8h7h8")
theme_override_fonts/mono_font = ExtResource("2_8h7h8")
theme_override_fonts/italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_font = ExtResource("2_8h7h8")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_top = 66.0
offset_right = 71.0
offset_bottom = 179.0
grow_horizontal = 2
scale = Vector2(0.55, 0.55)
pivot_offset = Vector2(68, 65)
theme_override_fonts/normal_font = ExtResource("2_8h7h8")
theme_override_fonts/mono_font = ExtResource("2_8h7h8")
theme_override_fonts/italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_italics_font = ExtResource("2_8h7h8")
theme_override_fonts/bold_font = ExtResource("2_8h7h8")
theme_override_font_sizes/bold_italics_font_size = 100
theme_override_font_sizes/italics_font_size = 100
theme_override_font_sizes/mono_font_size = 100
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 100
bbcode_enabled = true
text = "-"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timers" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="Timers"]

[node name="WaveTimer" type="Timer" parent="Timers"]

[node name="HordeDelayTimer" type="Timer" parent="Timers"]

[node name="WaveCheckTimer" type="Timer" parent="Timers"]

[node name="CountdownTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="FightTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="WaveBreakTimer" type="Timer" parent="Timers"]
process_mode = 1
one_shot = true

[node name="MessageTimer" type="Timer" parent="Timers"]
process_mode = 1
one_shot = true
